--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,9 @@
     "require": {
         "php": ">=5.3.0"
     },
+    "require-dev": {
+        "phpunit/phpunit": "~4.0"
+    },
     "suggest": {
         "ext-xattr": "Fastest cache files handling via extended attributes"
     }
