--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "comodojo/cache",
     "description": "Extensible, multi layer object cache interface",
-    "license": "GPL-3.0+",
+    "license": "MIT",
     "type": "library",
     "keywords": [
         "cache",
@@ -14,7 +14,7 @@
     "authors": [
         {
             "name": "Marco Giovinazzi",
-            "email": "info@comodojo.org"
+            "email": "marco.giovinazzi@comodojo.org"
         }
     ],
     "autoload": {
@@ -24,7 +24,8 @@
         }
     },
     "require": {
-        "php": ">=5.3.0"
+        "php": ">=5.3.0",
+        "comodojo/database": "1.0.x-dev"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.0"
