--- a/.travis.yml
+++ b/.travis.yml
@@ -23,12 +23,13 @@ services:
 
 before_install:
   - sudo apt-get update -qq
-  - if [[ $TRAVIS_PHP_VERSION != 'hhvm' && `php-config --vernum` -ge 50500 ]] ; then pecl config-set preferred_state beta; printf "yes\n" | pecl install apcu ; else echo 'extension="apc.so"' >> ./tests/travis/php.ini; fi
+  - if [[ "$TRAVIS_PHP_VERSION" == 5.3* ]] ; then echo "extension=apc.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini ; fi
+  - if [[ "`phpenv version-name`" != "hhvm" && "$TRAVIS_PHP_VERSION" != 5.3* ]] ; then pecl config-set preferred_state beta; printf "yes\n" | pecl install apcu ; fi
+  - if [[ "`phpenv version-name`" != "hhvm" ]] ; then phpenv config-add $TRAVIS_BUILD_DIR/tests/resources/ext.ini ; fi
   - composer self-update
   - mysql -u root < $TRAVIS_BUILD_DIR/tests/resources/DatabaseCacheCreateSchema.sql
 
 before_script:
   - composer install --prefer-source
-  - phpenv config-add $TRAVIS_BUILD_DIR/tests/resources/ext.ini
 
 script: ./vendor/bin/phpunit --testsuite $SUITE
