--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ composer.lock
 vendor/
 tests/localcache/*
 !tests/localcache/.placeholder
+build
 # Commit your application's lock file http://getcomposer.org/doc/01-basic-usage.md#composer-lock-the-lock-file
 # You may choose to ignore a library lock file http://getcomposer.org/doc/02-libraries.md#lock-file
 # composer.lock
