--- a/.travis.yml
+++ b/.travis.yml
@@ -32,4 +32,7 @@ before_install:
 before_script:
   - composer install --prefer-source
 
-script: ./vendor/bin/phpunit --testsuite $SUITE
+script: ./vendor/bin/phpunit --testsuite $SUITE --coverage-text --coverage-clover=coverage.clover
+
+after_script:
+  - if [[ $TRAVIS_PHP_VERSION != 'hhvm' && $TRAVIS_PHP_VERSION != '7.0' ]]; then php vendor/bin/ocular code-coverage:upload --format=php-clover coverage.clover; fi
