--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,6 @@ php:
 matrix:
   allow_failures:
     - php: 7
-    - php: hhvm
 
 env:
   - SUITE=comodojo-cache-travis
@@ -26,13 +25,15 @@ before_install:
   - if [[ "$TRAVIS_PHP_VERSION" == 5.3* ]] ; then echo "extension=apc.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini ; fi
   - if [[ "`phpenv version-name`" != "hhvm" && "$TRAVIS_PHP_VERSION" != 5.3* ]] ; then pecl config-set preferred_state beta; printf "yes\n" | pecl install apcu ; fi
   - if [[ "`phpenv version-name`" != "hhvm" ]] ; then phpenv config-add $TRAVIS_BUILD_DIR/tests/resources/ext.ini ; fi
-  - composer self-update
+  - travis_retry composer self-update
   - mysql -u root < $TRAVIS_BUILD_DIR/tests/resources/DatabaseCacheCreateSchema.sql
 
-before_script:
-  - composer install --prefer-source
+install:
+  - travis_retry composer install --no-interaction --prefer-source
 
-script: ./vendor/bin/phpunit --testsuite $SUITE --coverage-text --coverage-clover=coverage.clover
+script:
+  - if [ "$TRAVIS_PHP_VERSION" == "hhvm" ]; then vendor/bin/phpunit --testsuite $SUITE; fi
+  - if [ "$TRAVIS_PHP_VERSION" != "hhvm" ]; then vendor/bin/phpunit --testsuite $SUITE --coverage-text --coverage-clover=coverage.clover; fi
 
 after_script:
-  - if [[ $TRAVIS_PHP_VERSION != 'hhvm' && $TRAVIS_PHP_VERSION != '7.0' ]]; then php vendor/bin/ocular code-coverage:upload --format=php-clover coverage.clover; fi
+  - bash -c 'if [[ "$TRAVIS_PHP_VERSION" != "hhvm" && "$TRAVIS_PHP_VERSION" != "7.0" ]]; then php vendor/bin/ocular code-coverage:upload --format=php-clover coverage.clover; fi;'
