--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,7 @@ php:
   - 5.4
   - 5.5
   - 5.6
-  - 7
   - hhvm
-
-matrix:
-  allow_failures:
-    - php: 7
 
 env:
   - SUITE=comodojo-cache-travis
@@ -36,4 +31,4 @@ script:
   - if [ "$TRAVIS_PHP_VERSION" != "hhvm" ]; then vendor/bin/phpunit --testsuite $SUITE --coverage-text --coverage-clover=coverage.clover; fi
 
 after_script:
-  - bash -c 'if [[ "$TRAVIS_PHP_VERSION" != "hhvm" && "$TRAVIS_PHP_VERSION" != "7.0" ]]; then php vendor/bin/ocular code-coverage:upload --format=php-clover coverage.clover; fi;'
+  - bash -c 'if [[ "$TRAVIS_PHP_VERSION" != "hhvm" ]]; then php vendor/bin/ocular code-coverage:upload --format=php-clover coverage.clover; fi;'
