--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ before_install:
   - mysql -u root < $TRAVIS_BUILD_DIR/tests/resources/DatabaseCacheCreateSchema.sql
 
 install:
-  - travis_retry composer install --no-interaction --prefer-source
+  - if [[ "$TRAVIS_PHP_VERSION" == 5.3* ]] ; then travis_retry composer update --no-interaction --prefer-source ; else travis_retry composer install --no-interaction --prefer-source ; fi
 
 script:
   - if [ "$TRAVIS_PHP_VERSION" == "hhvm" ]; then vendor/bin/phpunit --testsuite $SUITE; fi
