--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
     },
     "require": {
         "php": ">=5.3.0",
-        "comodojo/database": "1.0.x-dev"
+        "comodojo/database": "1.0.x-dev",
+        "monolog/monolog": "~1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.0",
