--- a/composer.json
+++ b/composer.json
@@ -26,21 +26,20 @@
     ],
     "autoload": {
         "psr-4": {
-            "Comodojo\\Cache\\": "src"
+            "Comodojo\\Cache\\": "src/Comodojo/Cache"
         }
     },
     "require": {
-        "php": ">=5.3.9",
+        "php": ">=5.4.0",
         "comodojo/database": "1.*",
-        "comodojo/exceptions": "@stable"
+        "comodojo/exceptions": "@stable",
+        "psr/log": "^1.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "~4.0",
-        "scrutinizer/ocular": "~1.1",
-        "monolog/monolog": "~1.0"
+        "phpunit/phpunit": "^4.0|^5.0",
+        "scrutinizer/ocular": "^1.0"
     },
     "suggest": {
-        "monolog/monolog": "Enable error logging",
         "ext-xattr": "Fastest cache files handling via extended attributes",
         "ext-redis": "Enable redis provider",
         "ext-memcached": "Enable Memcached provider",
