--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ php:
   - 5.4
   - 5.5
   - 5.6
+  - 7.0
   - hhvm
 
 env:
@@ -15,8 +16,7 @@ services:
 
 before_install:
   - sudo apt-get update -qq
-  - if [[ "$TRAVIS_PHP_VERSION" == 5.3* ]] ; then echo "extension=apc.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini ; fi
-  - if [[ "`phpenv version-name`" != "hhvm" && "$TRAVIS_PHP_VERSION" != 5.3* ]] ; then pecl config-set preferred_state beta; printf "yes\n" | pecl install apcu ; fi
+  - sudo apt-get install php-apcu
   - if [[ "`phpenv version-name`" != "hhvm" ]] ; then phpenv config-add $TRAVIS_BUILD_DIR/tests/resources/ext.ini ; fi
   - travis_retry composer self-update
   - mysql -u root < $TRAVIS_BUILD_DIR/tests/resources/DatabaseCacheCreateSchema.sql
