--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,10 @@ services:
 
 before_install:
   - sudo apt-get update -qq
-  - sudo apt-get install php-apcu
   - if [[ "`phpenv version-name`" != "hhvm" ]] ; then phpenv config-add $TRAVIS_BUILD_DIR/tests/resources/ext.ini ; fi
+  - if [[ $TRAVIS_PHP_VERSION != 'hhvm' ]] ; then pecl channel-update pecl.php.net; fi;
+  - if [[ $TRAVIS_PHP_VERSION =~ 5.[456] ]] ; then echo yes | pecl install apcu-4.0.10; fi;
+  - if [[ $TRAVIS_PHP_VERSION = 7.* ]] ; then pecl config-set preferred_state beta; echo yes | pecl install apcu; fi;
   - travis_retry composer self-update
   - mysql -u root < $TRAVIS_BUILD_DIR/tests/resources/DatabaseCacheCreateSchema.sql
   - echo "USE mysql;\nUPDATE user SET password=PASSWORD('comodojo') WHERE user='root';\nFLUSH PRIVILEGES;\n" | mysql -u root
