--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^4.0|^5.0",
-        "scrutinizer/ocular": "^1.0"
+        "scrutinizer/ocular": "^1.0",
+        "monolog/monolog": "^1.0"
     },
     "suggest": {
         "ext-xattr": "Fastest cache files handling via extended attributes",
