new autoSetTime in Cache, bug fix, more tests

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -22,6 +22,7 @@
             <file>tests/Cache/CachePickRandomTest.php</file>
             <file>tests/Cache/CachePickAllTest.php</file>
             <file>tests/Cache/CachePickByWeightTest.php</file>
+            <file>tests/Cache/CachePickTraverseTest.php</file>
         </testsuite>
     </testsuites>
     <testsuites>
