--- a/composer.json
+++ b/composer.json
@@ -30,10 +30,12 @@
         }
     },
     "require": {
-        "php": ">=5.6.0",
+        "php": ">=5.3.3",
         "comodojo/database": "1.*",
-        "comodojo/exceptions": "@stable",
-        "psr/log": "^1.0"
+        "comodojo/foundation": "dev-master",
+        "comodojo/exceptions": "dev-master",
+        "psr/log": "^1.0",
+        "psr/cache": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.0|^5.0",
@@ -47,5 +49,11 @@
         "ext-xcache": "Enable XCache provider",
         "ext-apc": "Enable Apc provider",
         "ext-apcu": "Enable Apcu provider"
-    }
+    },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url":  "git@github.com:comodojo/foundation.git"
+        }
+    ]
 }
