--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
         }
     },
     "require": {
-        "php": ">=5.3.3",
+        "php": ">=5.6.0",
         "comodojo/database": "1.*",
         "comodojo/foundation": "dev-master",
         "comodojo/exceptions": "dev-master",
@@ -39,8 +39,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^4.0|^5.0",
-        "scrutinizer/ocular": "^1.0",
-        "monolog/monolog": "^1.0"
+        "scrutinizer/ocular": "^1.0"
     },
     "suggest": {
         "ext-xattr": "Fastest cache files handling via extended attributes",
