--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -18,6 +18,7 @@
             <file>tests/Comodojo/Cache/Providers/ApcTest.php</file>
             <file>tests/Comodojo/Cache/Providers/FilesystemTest.php</file>
             <file>tests/Comodojo/Cache/Providers/MemcachedTest.php</file>
+            <file>tests/Comodojo/Cache/Providers/PhpRedisTest.php</file>
         </testsuite>
     </testsuites>
     <testsuites>
