--- a/composer.json
+++ b/composer.json
@@ -29,12 +29,11 @@
             "Comodojo\\Cache\\": "src/Comodojo/Cache"
         }
     },
+    "minimum-stability": "dev",
     "require": {
         "php": ">=5.6.0",
         "comodojo/database": "1.*",
         "comodojo/foundation": "dev-master",
-        "comodojo/exceptions": "dev-master",
-        "psr/log": "^1.0",
         "psr/cache": "^1.0"
     },
     "require-dev": {
