--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "comodojo/cache",
-    "description": "Very fast PHP data caching across multiple storage engines",
+    "description": "PSR-6 and PSR-16 compliant enhanced cache manager across multiple storage engines",
     "license": "MIT",
     "type": "library",
     "keywords": [
@@ -11,7 +11,8 @@
         "memcached",
         "apc",
         "apcu",
-        "xcache"
+        "namespace",
+        "manger"
     ],
     "homepage": "https://comodojo.org",
      "support": {
@@ -26,18 +27,22 @@
     ],
     "autoload": {
         "psr-4": {
-            "Comodojo\\Cache\\": "src/Comodojo/Cache"
+            "Comodojo\\Cache\\": "src/Comodojo/Cache",
+            "Comodojo\\SimpleCache\\": "src/Comodojo/SimpleCache"
         }
     },
     "minimum-stability": "dev",
     "require": {
         "php": ">=5.6.0",
-        "comodojo/foundation": "dev-master",
-        "psr/cache": "^1.0"
+        "comodojo/foundation": "dev-master"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.0|^5.0",
         "scrutinizer/ocular": "^1.0"
+    },
+    "provide": {
+        "psr/cache-implementation": "~1.0",
+        "psr/simple-cache-implementation": "~1.0"
     },
     "suggest": {
         "ext-xattr": "Fastest cache files handling via extended attributes",
