--- a/.travis.yml
+++ b/.travis.yml
@@ -12,11 +12,11 @@ services:
 
 before_install:
   - sudo apt-get update -qq
-  - if [[ $TRAVIS_PHP_VERSION != "hhvm" ]] ; then phpenv config-add $TRAVIS_BUILD_DIR/tests/resources/ext.ini ; fi
-  - if [[ $TRAVIS_PHP_VERSION = 5.4 ]] ; then echo 'extension=apcu.so' >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini; fi
   - if [[ $TRAVIS_PHP_VERSION != 'hhvm' ]] ; then pecl channel-update pecl.php.net; fi;
-  - if [[ $TRAVIS_PHP_VERSION =~ 5.[456] ]] ; then echo yes | pecl install apcu-4.0.10; fi;
-  - if [[ $TRAVIS_PHP_VERSION = 7.* ]] ; then pecl config-set preferred_state beta; echo yes | pecl install apcu; fi;
+  - if [[ $TRAVIS_PHP_VERSION = "5.6" ]]; then echo yes | pecl install apcu-4.0.11; fi
+  - if [[ $TRAVIS_PHP_VERSION = "7.0" ]]; then echo yes | pecl install apcu-5.1.7; fi
+  - if [[ $TRAVIS_PHP_VERSION = "7.1" ]]; then echo yes | pecl install apcu-5.1.7; fi
+  - if [[ $TRAVIS_PHP_VERSION != "hhvm" ]]; then phpenv config-add $TRAVIS_BUILD_DIR/tests/resources/ext.ini; fi
   - travis_retry composer self-update
 
 install:
