--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ before_install:
   - if [[ $TRAVIS_PHP_VERSION = "5.6" ]]; then echo yes | pecl install apcu-4.0.11; fi
   - if [[ $TRAVIS_PHP_VERSION = "7.0" ]]; then echo yes | pecl install apcu-5.1.7; fi
   - if [[ $TRAVIS_PHP_VERSION = "7.1" ]]; then echo yes | pecl install apcu-5.1.7; fi
-  - if [[ $TRAVIS_PHP_VERSION != "hhvm" ]]; then phpenv config-add $TRAVIS_BUILD_DIR/tests/resources/ext.ini; fi
+  - if [[ $TRAVIS_PHP_VERSION != "hhvm" ]]; then phpenv config-add $TRAVIS_BUILD_DIR/tests/resources/travis-$TRAVIS_PHP_VERSION.ini; fi
   - travis_retry composer self-update
 
 install:
