--- a/tests/resources/travis-7.1.ini
+++ b/tests/resources/travis-7.1.ini
@@ -1,6 +1,7 @@
 extension="redis.so"
 extension="memcached.so"
-extension=apc.so
+extension="apcu.so"
+extension="apc.so"
 
 apc.enabled=1
 apc.enable_cli=1
