--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,15 @@ php:
   - 5.4
   - 5.5
   - 5.6
+  - 7.0
+  - 7.1
   - hhvm
+
+matrix:
+  allow_failures:
+    - php: 7.0
+    - php: 7.1
+    - php: hhvm
 
 env:
   - SUITE=comodojo-cache-travis
@@ -16,9 +24,14 @@ services:
 
 before_install:
   - sudo apt-get update -qq
-  - if [[ "$TRAVIS_PHP_VERSION" == 5.3* ]] ; then echo "extension=apc.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini ; fi
-  - if [[ "`phpenv version-name`" != "hhvm" && "$TRAVIS_PHP_VERSION" != 5.3* ]] ; then pecl config-set preferred_state beta; printf "yes\n" | pecl install apcu ; fi
-  - if [[ "`phpenv version-name`" != "hhvm" ]] ; then phpenv config-add $TRAVIS_BUILD_DIR/tests/resources/ext.ini ; fi
+  - if [[ $TRAVIS_PHP_VERSION != 'hhvm' ]] ; then pecl channel-update pecl.php.net; fi;
+  - if [[ $TRAVIS_PHP_VERSION = "5.4" ]]; then echo yes | pecl install apcu-4.0.11; fi
+  - if [[ $TRAVIS_PHP_VERSION = "5.6" ]]; then echo yes | pecl install apcu-4.0.11; fi
+  - if [[ $TRAVIS_PHP_VERSION = "7.0" ]]; then echo yes | pecl install apcu-5.1.7; fi
+  - if [[ $TRAVIS_PHP_VERSION = "7.0" ]]; then echo yes | pecl install apcu_bc-beta; fi
+  - if [[ $TRAVIS_PHP_VERSION = "7.1" ]]; then echo yes | pecl install apcu-5.1.7; fi
+  - if [[ $TRAVIS_PHP_VERSION = "7.1" ]]; then echo yes | pecl install apcu_bc-beta; fi
+  - if [[ $TRAVIS_PHP_VERSION != "hhvm" ]]; then phpenv config-add $TRAVIS_BUILD_DIR/tests/resources/travis-$TRAVIS_PHP_VERSION.ini; fi
   - travis_retry composer self-update
   - mysql -u root < $TRAVIS_BUILD_DIR/tests/resources/DatabaseCacheCreateSchema.sql
 
