--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,7 @@ services:
 before_install:
   - sudo apt-get update -qq
   - if [[ $TRAVIS_PHP_VERSION != 'hhvm' ]] ; then pecl channel-update pecl.php.net; fi;
-  - if [[ $TRAVIS_PHP_VERSION = "7.0" ]]; then echo yes | pecl install apcu_bc-beta; fi
-  - if [[ $TRAVIS_PHP_VERSION = "7.1" ]]; then echo yes | pecl install apcu_bc-beta; fi
+  - if [[ $TRAVIS_PHP_VERSION != 'hhvm' ]]; then echo yes | pecl install apcu_bc-beta; fi
   - if [[ $TRAVIS_PHP_VERSION != "hhvm" ]]; then phpenv config-add $TRAVIS_BUILD_DIR/tests/resources/travis-$TRAVIS_PHP_VERSION.ini; fi
   - travis_retry composer self-update
 
