--- a/composer.json
+++ b/composer.json
@@ -31,10 +31,10 @@
             "Comodojo\\SimpleCache\\": "src/Comodojo/SimpleCache"
         }
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "beta",
     "require": {
         "php": ">=5.6.0",
-        "comodojo/foundation": "dev-master"
+        "comodojo/foundation": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.0|^5.0",
