--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,5 @@ tests/localcache/*
 tests/tmp/*
 !tests/tmp/.placeholder
 build
-# Commit your application's lock file http://getcomposer.org/doc/01-basic-usage.md#composer-lock-the-lock-file
-# You may choose to ignore a library lock file http://getcomposer.org/doc/02-libraries.md#lock-file
-# composer.lock
+docs/build/
+.DS_Store
