--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
     },
     "require": {
         "php": ">=5.6.0",
-        "comodojo/foundation": "^1.0"
+        "pmarcelli/foundation": "dev-foundation_u7320"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.0|^5.0",
