--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "comodojo/cache",
+    "name": "pmarcelli/cache",
     "description": "PSR-6 and PSR-16 compliant enhanced cache manager across multiple storage engines",
     "license": "MIT",
     "type": "library",
@@ -33,7 +33,7 @@
     },
     "require": {
         "php": ">=5.6.0",
-        "comodojo/foundation": "^1.0"
+        "pmarcelli/foundation": "dev-foundation_u7320_2"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.0|^5.0",
