--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "comodojo/cache",
+    "name": "pmarcelli/cache",
     "description": "PSR-6 and PSR-16 compliant enhanced cache manager across multiple storage engines",
     "license": "MIT",
     "type": "library",
@@ -31,10 +31,9 @@
             "Comodojo\\SimpleCache\\": "src/Comodojo/SimpleCache"
         }
     },
-    "minimum-stability": "dev",
     "require": {
         "php": ">=5.6.0",
-        "comodojo/foundation": "dev-master"
+        "pmarcelli/foundation": "dev-foundation_u7320"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.0|^5.0",
